# web2app-gui

./: .gitignore  CMakeLists.txt  README.md  gitbutler-distrobox-installation-guide.md  gitbutler-distrobox-installation-guide.txt  install.sh  web2app-manager.desktop
.kilocode/rules/: auto-commit-push-workflow.md
.kilocode/workflows/: auto-commit-push.md
.windsurf/rules/: auto-commit-push-workflow.md
.windsurf/workflows/: auto-commit-push.md
src/: main.cpp
